Fix wrong color

--- a/styles/route-settings.less
+++ b/styles/route-settings.less
@@ -235,6 +235,9 @@
       .text {
         font-size: 14px;
       }
+      .icon-icon-checked::before {
+        color: @blue;
+      }
     }
   }
 
